Version 102, June 26, 2000
Switched to configure-based makefiles (autoconf)
with-input-from-file and with-output-to-file close the port when
 control leaves the dynamic extent of the call (normally, through an
 exception, or through a general continuation jump).
Added detail field to exn:i/o:filesystem
Added immutable strings and pairs, string->immutable-string, and
 pair->immutable-pair
Added read-decimal-as-inexact parameter
Fixed number reader to allow +inf.0, -inf.0, and +nan.0 in
 complex constants
Fixed bugs in number reader for hexadecimal numbers containing `.'
 and/or `s'/`l'-based exponents; note that `#e#x+e.s+e@-e.l-e'
 is a legal number(!)
Fixed reading from special devices, such as /dev/null and /dev/zero,
 in Solaris and HP/UX
Fixed blocking output (to stdout, stderr, or a process port) so that
 only the writing thread is blocked
Changed read-string! to read-string-avail!, added
 read-string-avail!/enable-break
Added write-string-avail and write-string-avail/enable-break
Added process/ports and process*/ports
Added file-stream-port?
Added 'update to the set of flags for open-output-file et al.
Changed default exit handler to return only results in 0 to 255
 as results to the OS, and everything else means 1
Changed time-apply to return four values, and to take an argument
 list to provide to the timed procedure
Change find-executable-path to accept #f as its second argument
Change normal-case-path to remove spaces at the end of a path
Changed angle on inexact zero (0 for 0.0, pi for -0.0)
Fixed arithmetic-shift for a -32 shift
Fixed angle on +nan.0
Fixed expt on 0 and a negative number
Added 'exec-file flag to find-system-path
Added provide-library
Added square and mergesort to MzLib's function.ss
Added tcp-addresses
Added -k command-line flag
Inside MzScheme: provided a way to fix the GC--thread problems
 under Windows, via GC_use_registered_statics
Inside MzScheme: scheme_basic_env() initializes break-enabled
 to #f instead of #t